z-index property for dropdown and searchbox to stay on top of sliders.

--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -6,7 +6,7 @@
   border: 1px solid var(--color-border);
   border-radius: 3px;
   isolation: isolate;
-  z-index: 5;
+  z-index: 4; /* required to layer higher than highest used z-index for slider element */
 
   &:disabled {
     pointer-events: none;
