Close icon on filter - consistent mid font colour.

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -22,7 +22,7 @@
     color: var(--color-font-mid);
   }
 
-  &.close:after {
+  &.close::after {
     content: 'close';
     color: var(--color-font-mid);
   }
