--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -1,17 +1,26 @@
 .dropdown {
   width: 100%;
   overflow: visible;
-  position: relative;
   background-color: var(--color-base-secondary);
   border: 1px solid var(--color-border);
   border-radius: 3px;
-  isolation: isolate;
-  z-index: 4; /* required to layer higher than highest used z-index for slider element */
 
-  &:disabled {
+  &.disabled {
     pointer-events: none;
     opacity: 0.4;
     color: var(--color-font);
+  }
+
+  &.active {
+    & > ul {
+      display: block;
+      position: absolute;
+      z-index: 4; /* required to layer higher than highest used z-index for slider element */
+    }
+
+    & > .head > .material-symbols-outlined:after {
+      content: 'arrow_drop_up';
+    }
   }
 
   & > .head {
@@ -66,6 +75,7 @@
 
     & > li.selected {
       background-color: var(--color-primary);
+      border: 1px solid var(--color-border);
       color: var(--color-font-contrast);
     }
 
@@ -76,16 +86,6 @@
       font-size: 80%;
       font-weight: bold;
       background-color: var(--color-hover);
-    }
-  }
-
-  &.active {
-    & > ul {
-      display: block;
-    }
-
-    & > .head > .material-symbols-outlined:after {
-      content: 'arrow_drop_up';
     }
   }
 
