Pills - fix for close button.

--- a/public/css/elements/_pills.css
+++ b/public/css/elements/_pills.css
@@ -18,6 +18,12 @@
       cursor: pointer;
       font-size: 0.8em;
       padding: 0 2px;
+
+      &:after {
+        content: 'close';
+        color: var(--color-font-contrast);
+        vertical-align: middle;
+      }
     }
   }
 }
