Dropdown back to being a button 😞
Change has widespread impact.

--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -5,7 +5,7 @@
   border: 1px solid var(--color-border);
   border-radius: 3px;
 
-  &.disabled {
+  &:disabled {
     pointer-events: none;
     opacity: 0.4;
     color: var(--color-font);
