--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -639,7 +639,7 @@ dialog {
   background-color: var(--color-base-secondary);
   border: 1px solid var(--color-border);
   border-radius: 3px;
-  &.disabled {
+  &:disabled {
     pointer-events: none;
     opacity: 0.4;
     color: var(--color-font);
