provide fallback font

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0);
 
 .material-symbols-outlined-important {
-  font-family: 'Material Symbols Outlined' !important;
+  font-family: 'Material Symbols Outlined', sans-serif !important;
 }
 
 .material-symbols-outlined {
