--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -766,10 +766,8 @@ dialog {
 .searchbox {
   width: 100%;
   overflow: visible;
-  position: relative;
   background-color: var(--color-base-tertiary);
   isolation: isolate;
-  z-index: 4;
   & > ul {
     display: none;
     max-height: 500px;
@@ -779,16 +777,21 @@ dialog {
     margin-top: -1px;
     text-align: left;
     background-color: var(--color-base-tertiary);
+    z-index: 4;
     & > li {
       padding: 5px;
       color: var(--color-font);
+      margin: 0 0.1em;
+      border-radius: 2px;
     }
     & > li:hover {
       background-color: var(--color-hover);
       cursor: pointer;
     }
     & > li.selected {
-      background-color: var(--color-base-secondary);
+      background-color: var(--color-primary);
+      border: 1px solid var(--color-border);
+      color: var(--color-font-contrast);
     }
     & .label {
       padding: 0 2px;
