Default view - on mobile ctrl to inherit background.
Otherwise when dragged up we can still see map toolbar underneath.

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -173,6 +173,7 @@
           position: relative;
           display: flex;
           flex-direction: column;
+          background-color: inherit;
         }
       }
     </style>
