--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -41,6 +41,7 @@
     display: flex;
     align-items: center;
     color: var(--color-font);
+    user-select: none;
 
     .material-symbols-outlined {
       font-size: 1.5em;
