Dialog - disabled user select;

--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -6,6 +6,7 @@ dialog {
   background-color: var(--color-base);
   color: var(--color-font);
   isolation: isolate;
+  user-select: none;
 
   & > button.close {
     position: absolute;
