Legend - user select disabled;

--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -115,6 +115,7 @@ body {
 
 /* public/css/layout/_legend.css */
 .legend {
+  user-select: none;
   & .contents-wrapper,
   &.content .contents-wrapper {
     margin-top: 0.5em;
