link with img- disabled select;

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -52,6 +52,7 @@ body {
 .link-with-img > * {
   display: inline-block;
   vertical-align: middle;
+  user-select: none;
 }
 .val-changed {
   input[type=number],
