--- a/public/css/base/_globals.css
+++ b/public/css/base/_globals.css
@@ -25,6 +25,10 @@ a {
   text-decoration: none;
   font-weight: bold;
   color: var(--color-primary);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
