--- a/public/css/elements/_chkbox.css
+++ b/public/css/elements/_chkbox.css
@@ -1,5 +1,9 @@
 label.checkbox {
   display: block;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 
   &.disabled {
