--- a/public/css/elements/_pills.css
+++ b/public/css/elements/_pills.css
@@ -12,6 +12,10 @@
     font-weight: bold;
     color: var(--color-font-contrast);
     background-color: var(--color-primary);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 
     button {
