--- a/public/css/layout/_cloudinary.css
+++ b/public/css/layout/_cloudinary.css
@@ -18,6 +18,10 @@
     text-align: center;
     color: var(--color-font);
     pointer-events: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 
     & > span {
