--- a/public/css/elements/_alert_confirm.css
+++ b/public/css/elements/_alert_confirm.css
@@ -1,6 +1,10 @@
 dialog.alert-confirm {
   width: 350px;
   max-height: 70%;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 
   &::-webkit-scrollbar {
