--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -6,6 +6,10 @@ dialog {
   background-color: var(--color-base);
   color: var(--color-font);
   isolation: isolate;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 
   & > button.close {
