--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -41,6 +41,10 @@
     display: flex;
     align-items: center;
     color: var(--color-font);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 
     .material-symbols-outlined {
