--- a/public/css/layout/_layerview.css
+++ b/public/css/layout/_layerview.css
@@ -14,6 +14,10 @@
 
   & > .meta {
     padding-bottom: 5px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
   }
 
