--- a/public/css/layout/_legend.css
+++ b/public/css/layout/_legend.css
@@ -1,4 +1,8 @@
 .legend {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 
   & .contents-wrapper,
