--- a/public/css/layout/_map_attribution.css
+++ b/public/css/layout/_map_attribution.css
@@ -14,6 +14,10 @@ body {
   width: 100%;
   padding: 5px;
   pointer-events: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 
   & > .logo {
