--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -272,6 +272,9 @@ input[type=search]::-webkit-search-cancel-button:hover {
 }
 
 /* public/css/base/_material_icons.css */
+.material-symbols-outlined-important {
+  font-family: "Material Symbols Outlined", sans-serif !important;
+}
 .material-symbols-outlined {
   font-variation-settings:
     "FILL" 0,
