--- a/public/css/elements/_pills.css
+++ b/public/css/elements/_pills.css
@@ -19,7 +19,7 @@
       font-size: 0.8em;
       padding: 0 2px;
 
-      &:after {
+      &.close:after {
         content: 'close';
         color: var(--color-font-contrast);
         vertical-align: middle;
