--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -753,7 +753,7 @@ dialog {
       cursor: pointer;
       font-size: 0.8em;
       padding: 0 2px;
-      &:after {
+      &.close:after {
         content: "close";
         color: var(--color-font-contrast);
         vertical-align: middle;
