--- a/public/css/elements/_pills.css
+++ b/public/css/elements/_pills.css
@@ -20,14 +20,8 @@
 
     button {
       cursor: pointer;
-      font-size: 1em;
       padding: 0 2px;
-
-      &.close:after {
-        content: 'close';
-        color: var(--color-font-contrast);
-        vertical-align: middle;
-      }
+      color: inherit;
     }
   }
 }
