Revert "inherit color"
This reverts commit fb10bbb08e129b5ee2a474f7bc1aa6fe4bab7e9a.

--- a/public/css/elements/_pills.css
+++ b/public/css/elements/_pills.css
@@ -20,8 +20,14 @@
 
     button {
       cursor: pointer;
+      font-size: 1em;
       padding: 0 2px;
-      color: inherit;
+
+      &.close:after {
+        content: 'close';
+        color: var(--color-font-contrast);
+        vertical-align: middle;
+      }
     }
   }
 }
