pill css changes
Removed the content assignment as this is already done in the parent
class

I then added in the inherit to both the button and close class

--- a/public/css/elements/_pills.css
+++ b/public/css/elements/_pills.css
@@ -22,10 +22,10 @@
       cursor: pointer;
       font-size: 1em;
       padding: 0 2px;
+      color: inherit;
 
-      &.close:after {
-        content: 'close';
-        color: var(--color-font-contrast);
+      &.close::after {
+        color: inherit;
         vertical-align: middle;
       }
     }
