--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -794,9 +794,9 @@ dialog {
       cursor: pointer;
       font-size: 1em;
       padding: 0 2px;
-      &.close:after {
-        content: "close";
-        color: var(--color-font-contrast);
+      color: inherit;
+      &.close::after {
+        color: inherit;
         vertical-align: middle;
       }
     }
