--- a/public/css/elements/_pills.css
+++ b/public/css/elements/_pills.css
@@ -18,16 +18,12 @@
     -ms-user-select: none;
     user-select: none;
 
-    button {
+    button.close {
       cursor: pointer;
       font-size: 1em;
       padding: 0 2px;
       color: inherit;
-
-      &.close::after {
-        color: inherit;
-        vertical-align: middle;
-      }
+      vertical-align: middle;
     }
   }
 }
