pill - inner close button always contrasting. (#2065)
* pill - close button always contrasting.

* Pill cross - updated sizing;

* inherit color

* Revert "inherit color"

This reverts commit fb10bbb08e129b5ee2a474f7bc1aa6fe4bab7e9a.

* pill css changes

Removed the content assignment as this is already done in the parent
class

I then added in the inherit to both the button and close class

* pill css changes

---------

Co-authored-by: Dennis Bauszus <dennis.bauszus@geolytix.co.uk>
Co-authored-by: Robert Hurst <robert.hurst@geolytix.co.uk>

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -312,7 +312,6 @@ input[type=search]::-webkit-search-cancel-button:hover {
   }
   &.close::after {
     content: "close";
-    color: var(--color-font-mid);
   }
 }
 .toggle-on {
@@ -790,15 +789,12 @@ dialog {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    button {
+    button.close {
       cursor: pointer;
-      font-size: 0.8em;
+      font-size: 1em;
       padding: 0 2px;
-      &:after {
-        content: "close";
-        color: var(--color-font-contrast);
-        vertical-align: middle;
-      }
+      color: inherit;
+      vertical-align: middle;
     }
   }
 }
