--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -30,6 +30,8 @@
 
 @import url('./elements/_slider.css');
 
+@import url('./elements/_toast.css');
+
 @import url('./layout/_divider.css');
 
 @import url('./layout/_cloudinary.css');
