--- a/public/css/elements/_toast.css
+++ b/public/css/elements/_toast.css
@@ -1,9 +1,9 @@
 .toast {
   position: fixed;
+  display: none;
   left: 0;
   bottom: 0;
   width: 100%;
-  z-index: 10001;
   isolation: isolate;
   background-color: var(--color-base);
   border-top: 1px solid var(--color-border);
