--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -997,6 +997,7 @@ dialog {
   }
   .actions {
     padding: 0.5em;
+    margin-top: 1em;
   }
   .toast-logo {
     height: 2.5em;
@@ -1009,13 +1010,14 @@ dialog {
     cursor: pointer;
     padding: 0.25em 0.5em 0.2em;
     transition: 300ms all;
+    width: 6em;
     font-size: 100%;
     border-radius: 3px;
     font-weight: bold;
     color: var(--color-font-contrast);
     background-color: var(--color-primary);
     &:hover {
-      box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+      text-decoration: underline;
     }
   }
   .reject {
