fix tabulator integrity

--- a/public/views/_user.html
+++ b/public/views/_user.html
@@ -23,6 +23,8 @@
     <script
       type="text/javascript"
       src="https://unpkg.com/tabulator-tables@6.3.1/dist/js/tabulator.min.js"
+      integrity="sha384-SKSq3cuuVWdfrjtLz9wNlqE0bMc903yMS5zGnFtwvfddplgxa1hywtiLyw1CbSHO"
+      crossorigin="anonymous"
     ></script>
 
     <style>
