--- a/public/css/elements/_toast.css
+++ b/public/css/elements/_toast.css
@@ -22,6 +22,16 @@
   .actions {
     padding: 0.5em;
     margin-top: 1em;
+
+    * {
+      margin: 0.1em;
+      transition: 300ms all;
+      width: 6em;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 
   .toast-logo {
@@ -31,30 +41,6 @@
     & img {
       height: 100%;
     }
-  }
-
-  button {
-    cursor: pointer;
-    padding: 0.25em 0.5em 0.2em;
-    transition: 300ms all;
-    width: 6em;
-    font-size: 100%;
-    border-radius: 3px;
-    font-weight: bold;
-    color: var(--color-font-contrast);
-    background-color: var(--color-primary);
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  .reject {
-    background-color: var(--color-danger);
-  }
-
-  .accept {
-    background-color: var(--color-info);
   }
 }
 
