--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -126,6 +126,13 @@ button {
   &.wide {
     width: 100%;
   }
+  &.action {
+    font-weight: bold;
+    > span.material-symbols-outlined {
+      font-size: inherit;
+      vertical-align: middle;
+    }
+  }
   &.flat {
     border-radius: 1px;
     border-bottom: 1px solid var(--color-border);
