--- a/public/css/elements/_toast.css
+++ b/public/css/elements/_toast.css
@@ -15,6 +15,14 @@
   transform: translateY(100%);
   animation: 1s ease-in-out 1s forwards showToast;
 
+  button.close {
+    position: absolute;
+    top: 0.1em;
+    right: 0.1em;
+    font-size: 1.2em;
+    color: var(--color-font-mid);
+  }
+
   &.ease-out {
     animation: 1s ease-in-out forwards hideToast;
   }
