--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -234,6 +234,13 @@
         }
       }
 
+      const toast = await mapp.ui.elements.toast({
+        timeout: 10000,
+        close: true
+      })
+
+      console.log(toast)
+
       // Restore scroll
       if ('scrollRestoration' in history) history.scrollRestoration = 'auto';
 
