--- a/public/css/layout/_toolbars.css
+++ b/public/css/layout/_toolbars.css
@@ -1,8 +1,16 @@
 .btn-column {
+  position: absolute;
+  top: 0;
   display: grid;
   grid-auto-rows: minmax(min-content, 4em);
   padding: 0.7em;
   pointer-events: none;
+  overflow: scroll;
+  max-height: 100%;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   & > * {
     pointer-events: auto;
@@ -37,22 +45,9 @@
   }
 }
 
-@media only screen and (min-width: 768px) {
-  .btn-column {
-    position: absolute;
-    height: 100%;
-    grid-row: 1 / 4;
-    grid-column: 3;
-    opacity: 0.8;
-  }
-}
-
 @media only screen and (max-width: 768px) {
   .btn-column {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
+    max-height: 100%;
   }
 }
 
