--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1342,10 +1342,16 @@ dialog {
 
 /* public/css/layout/_toolbars.css */
 .btn-column {
+  position: absolute;
   display: grid;
   grid-auto-rows: minmax(min-content, 4em);
   padding: 0.7em;
   pointer-events: none;
+  overflow: scroll;
+  max-height: 100%;
+  &::-webkit-scrollbar {
+    display: none;
+  }
   & > * {
     pointer-events: auto;
   }
@@ -1374,21 +1380,9 @@ dialog {
     cursor: not-allowed;
   }
 }
-@media only screen and (min-width: 768px) {
-  .btn-column {
-    position: absolute;
-    height: 100%;
-    grid-row: 1 / 4;
-    grid-column: 3;
-    opacity: 0.8;
-  }
-}
 @media only screen and (max-width: 768px) {
   .btn-column {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
+    max-height: 100%;
   }
 }
 .btn-row {
