--- a/public/css/layout/_toolbars.css
+++ b/public/css/layout/_toolbars.css
@@ -6,6 +6,7 @@
   padding: 0.7em;
   overflow: scroll;
   max-height: 100%;
+  scrollbar-width: none;
 
   &::-webkit-scrollbar {
     display: none;
