--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -9,6 +9,7 @@ button {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  transition: all 0.2s ease-in-out;
 
   > .material-symbols-outlined {
     pointer-events: none;
@@ -27,6 +28,11 @@ button {
 
   &.wide {
     width: 100%;
+  }
+
+  &.action > span.material-symbols-outlined {
+    font-size: inherit;
+    vertical-align: middle;
   }
 
   &.primary {
