Return dropdown node without pills container.

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -386,7 +386,7 @@
           },
         });
 
-        layersTab.appendChild(mapp.utils.html.node`${localesDropdown}`);
+        layersTab.appendChild(localesDropdown);
       }
 
       if (!window.ol) await mapp.utils.olScript();
