feat(userLocale): userLocale element method (#2134)
Co-authored-by: Rob Hurst <robert.hurst@geolytix.co.uk>
Co-authored-by: AlexGeere <alex.geere@gmail.com>
Co-authored-by: Dennis Bauszus <dennis.bauszus@geolytix.co.uk>

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1468,4 +1468,17 @@ dialog {
   gap: 5px;
 }
 
+/* public/css/layout/_user_locale.css */
+.user-locales {
+  height: 75px;
+  overflow-y: auto;
+  li {
+    display: flex;
+    align-items: center;
+  }
+  button {
+    height: 24px;
+  }
+}
+
 /* public/css/_ui.css */
