--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -669,6 +669,13 @@ dialog {
 }
 
 /* public/css/elements/_dropdown.css */
+.select-dropdown {
+  width: 100%;
+  option.selected {
+    background-color: var(--color-primary);
+    color: var(--color-font-contrast);
+  }
+}
 .dropdown {
   width: 100%;
   overflow: visible;
