--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -1,3 +1,12 @@
+.select-dropdown {
+  width: 100%;
+
+  option.selected {
+    background-color: var(--color-primary);
+    color: var(--color-font-contrast);
+  }
+}
+
 .dropdown {
   width: 100%;
   overflow: visible;
