--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -433,6 +433,7 @@
       hooks: true,
       scrollWheelZoom: true,
       loadPlugins: true,
+      mapButton: document.getElementById('mapButton'),
       attribution: {
         target: document.getElementById('Map'),
         logo: mapp.utils.html.node`
