Assign mapButton to mapview object (#2151)

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -431,6 +431,7 @@
       hooks: true,
       scrollWheelZoom: true,
       loadPlugins: true,
+      mapButton: document.getElementById('mapButton'),
       attribution: {
         target: document.getElementById('Map'),
         logo: mapp.utils.html.node`
