--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -6,3 +6,7 @@
     color: var(--color-font-contrast);
   }
 }
+
+input[type='search']::-webkit-calendar-picker-indicator {
+  display: none !important;
+}
