--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -688,6 +688,8 @@ dialog {
 /* public/css/elements/_dropdown.css */
 .select-dropdown {
   width: 100%;
+  background-color: var(--color-base-secondary);
+  color: var(--color-font);
   option.selected {
     background-color: var(--color-primary);
     color: var(--color-font-contrast);
