--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -373,15 +373,6 @@
       });
     }
 
-      let testdropdown = mapp.ui.elements.dropdown({
-        multi: true,
-        entries: [{ title: 'Foo', option: 'foo' }, { title: 'Bar', option: 'bar', selected: true }]
-      });
-
-      layersTab.appendChild(testdropdown);
-
-
-
     if (mapp.user?.locale instanceof Object) {
 
       Object.assign(locale, mapp.user?.locale)
@@ -425,7 +416,7 @@
         },
       });
 
-      layersTab.appendChild(mapp.utils.html.node`${localesDropdown}`);
+      layersTab.appendChild(localesDropdown);
     }
 
     if (!window.ol) await mapp.utils.olScript();
