--- a/public/css/layout/_locationview.css
+++ b/public/css/layout/_locationview.css
@@ -112,7 +112,7 @@
   display: flex;
   align-items: center;
 
-  & > :nth-child(2) {
-    margin-left: auto;
+  & > :first-child {
+    flex-grow: 1;
   }
 }
