--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -38,6 +38,8 @@
 
 @import url('./layout/_image_preview.css');
 
+@import url('./layout/_histogram.css');
+
 @import url('./layout/_layerview.css');
 
 @import url('./layout/_locationview.css');
