--- a/public/css/layout/_histogram.css
+++ b/public/css/layout/_histogram.css
@@ -13,16 +13,17 @@
     border-top-right-radius: 2px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 
-    & > div.bucket-info {
+    div.bucket-info {
       position: absolute;
       min-width: 60px;
       background-color: var(--color-primary);
       color: var(--color-font-contrast);
       display: inline-block;
       text-align: center;
+      border-radius: 2px;
       padding: 0 0.2em;
-      top: 0;
       left: 50%;
+      bottom: 15px;
       transform: translateX(-50%);
       visibility: hidden;
       opacity: 0;
@@ -35,7 +36,7 @@
         border-top: 5px solid var(--color-primary);
         border-left: 5px solid transparent;
         border-right: 5px solid transparent;
-        top: 100%;
+        bottom: -5px;
         left: 50%;
         transform: translateX(-50%);
       }
@@ -44,7 +45,6 @@
     &:hover > div.bucket-info {
       visibility: visible;
       opacity: 1;
-      top: 0;
     }
   }
 }
