--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1103,20 +1103,21 @@ input[type=search]::-webkit-calendar-picker-indicator {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-    & > div.bucket-info {
+    div.bucket-info {
       position: absolute;
       min-width: 60px;
       background-color: var(--color-primary);
       color: var(--color-font-contrast);
       display: inline-block;
       text-align: center;
+      border-radius: 2px;
       padding: 0 0.2em;
-      top: 0;
       left: 50%;
+      bottom: 15px;
       transform: translateX(-50%);
       visibility: hidden;
       opacity: 0;
-      transition: all .3s ease;
+      transition: all 0.3s ease;
       z-index: 1;
       &:after {
         position: absolute;
@@ -1124,7 +1125,7 @@ input[type=search]::-webkit-calendar-picker-indicator {
         border-top: 5px solid var(--color-primary);
         border-left: 5px solid transparent;
         border-right: 5px solid transparent;
-        top: 0;
+        bottom: -5px;
         left: 50%;
         transform: translateX(-50%);
       }
@@ -1132,7 +1133,6 @@ input[type=search]::-webkit-calendar-picker-indicator {
     &:hover > div.bucket-info {
       visibility: visible;
       opacity: 1;
-      top: 0;
     }
   }
 }
