Revert "Merge branch 'patch' into pr/2179"
This reverts commit d3a2076c1d9a2a4e7ea974c8949db76c565db610, reversing
changes made to ecc5b606ae431bd523634bd0ef60002d980729b4.

--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -62,11 +62,14 @@
       height: 1.5em;
     }
 
-    & > :first-child {
+    & > :nth-child(1) {
       overflow: hidden;
       white-space: normal;
       text-overflow: ellipsis;
-      flex-grow: 1;
+    }
+
+    & > :nth-child(2) {
+      margin-left: auto;
     }
   }
 
