--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -33,8 +33,8 @@ dialog {
     left: 0;
     background-color: inherit;
 
-    & > :first-child {
-      flex-grow: 1;
+    & > :nth-child(2) {
+      margin-left: auto;
     }
 
     & > .material-symbols-outlined {
