--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -553,8 +553,8 @@ dialog {
     top: -1px;
     left: 0;
     background-color: inherit;
-    & > :first-child {
-      flex-grow: 1;
+    & > :nth-child(2) {
+      margin-left: auto;
     }
     & > .material-symbols-outlined {
       font-size: 1.2em;
@@ -653,11 +653,13 @@ dialog {
       width: 1.5em;
       height: 1.5em;
     }
-    & > :first-child {
+    & > :nth-child(1) {
       overflow: hidden;
       white-space: normal;
       text-overflow: ellipsis;
-      flex-grow: 1;
+    }
+    & > :nth-child(2) {
+      margin-left: auto;
     }
   }
   &.flat {
@@ -684,17 +686,95 @@ dialog {
 }
 
 /* public/css/elements/_dropdown.css */
-.select-dropdown {
+.dropdown {
   width: 100%;
+  overflow: visible;
   background-color: var(--color-base-secondary);
-  color: var(--color-font);
-  option.selected {
-    background-color: var(--color-primary);
-    color: var(--color-font-contrast);
+  border: 1px solid var(--color-border);
+  border-radius: 3px;
+  &:disabled {
+    pointer-events: none;
+    opacity: 0.4;
+    color: var(--color-font);
+  }
+  &.active {
+    & > ul {
+      display: block;
+      position: absolute;
+      z-index: 4;
+    }
+    & > .head > .material-symbols-outlined:after {
+      content: "arrow_drop_up";
+    }
+  }
+  & > .head {
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    color: var(--color-primary);
+    & > :first-child {
+      pointer-events: none;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+    > .material-symbols-outlined {
+      pointer-events: none;
+      margin-left: auto;
+      width: 1.5em;
+      &:after {
+        content: "arrow_drop_down";
+        background-color: transparent;
+      }
+    }
+  }
+  & > ul {
+    background-color: var(--color-base-tertiary);
+    color: var(--color-font);
+    display: none;
+    position: absolute;
+    max-height: 500px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    box-shadow: 1px 1px 3px var(--color-border);
+    border: 1px solid var(--color-border);
+    margin-top: -1px;
+    text-align: left;
+    & > li {
+      padding: 5px;
+      color: var(--color-font);
+      margin: 0 0.1em;
+      border-radius: 2px;
+    }
+    & > li:hover {
+      background-color: var(--color-hover);
+      cursor: pointer;
+    }
+    & > li.selected {
+      background-color: var(--color-primary);
+      border: 1px solid var(--color-border);
+      color: var(--color-font-contrast);
+    }
+    & .label {
+      padding: 0 6px;
+      border-radius: 2px;
+      color: var(--color-font);
+      font-size: 80%;
+      font-weight: bold;
+      background-color: var(--color-hover);
+    }
+  }
+  &.dropdown-reverse > ul {
+    bottom: 30px;
   }
 }
-input[type=search]::-webkit-calendar-picker-indicator {
-  display: none !important;
+@media print {
+  .dropdown {
+    box-shadow: none;
+    & > .head > .material-symbols-outlined {
+      display: none;
+    }
+  }
 }
 
 /* public/css/elements/_key.css */
@@ -1245,8 +1325,8 @@ input[type=search]::-webkit-calendar-picker-indicator {
 .flex-spacer {
   display: flex;
   align-items: center;
-  & > :first-child {
-    flex-grow: 1;
+  & > :nth-child(2) {
+    margin-left: auto;
   }
 }
 
