--- a/public/css/layout/_histogram.css
+++ b/public/css/layout/_histogram.css
@@ -7,11 +7,11 @@
     position: relative;
     background-color: var(--color-hover);
     align-self: flex-end;
-    cursor: pointer;
+    cursor: default;
     flex-grow: 1;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
     div.bucket-info {
       position: absolute;
