--- a/public/css/layout/_histogram.css
+++ b/public/css/layout/_histogram.css
@@ -11,7 +11,8 @@
     flex-grow: 1;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px
+      1px 3px -1px;
 
     div.bucket-info {
       position: absolute;
@@ -28,6 +29,7 @@
       visibility: hidden;
       opacity: 0;
       transition: all 0.3s ease;
+      isolation: isolate;
       z-index: 1;
 
       &:after {
