popout on all drawers

--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -73,6 +73,12 @@ dialog {
     transform: translate(-50%, -50%);
   }
 
+  &.popout .material-symbols-outlined.toggle-on {
+    &::after {
+      color: var(--color-active) !important;
+    }
+  }
+
   .minimize-btn::after {
     content: 'minimize';
   }
