--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -589,7 +589,7 @@ dialog {
   }
   &.popout .material-symbols-outlined.toggle-on {
     &::after {
-      color: var(--color-active) !important;
+      color: var(--color-active);
     }
   }
   .minimize-btn::after {
