used contained and popoutbtn in viewconfig

--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -79,6 +79,12 @@ dialog {
     }
   }
 
+  &.popout {
+    [data-id='popout-btn'] {
+      display: none;
+    }
+  }
+
   .minimize-btn::after {
     content: 'minimize';
   }
