--- a/public/css/layout/_histogram.css
+++ b/public/css/layout/_histogram.css
@@ -3,6 +3,11 @@
   flex-direction: row;
   gap: 0.5em;
 
+  .xlabel {
+    writing-mode: sideways-lr;
+    text-align: center;
+  }
+
   .bucket {
     position: relative;
     background-color: var(--color-hover);
