--- a/public/css/layout/_histogram.css
+++ b/public/css/layout/_histogram.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   gap: 0.5em;
 
-  .xlabel {
+  .ylabel {
     writing-mode: sideways-lr;
     text-align: center;
     color: var(--color-font-mid);
