--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1092,7 +1092,7 @@ input[type=search]::-webkit-calendar-picker-indicator {
   display: flex;
   flex-direction: row;
   gap: 0.5em;
-  .xlabel {
+  .ylabel {
     writing-mode: sideways-lr;
     text-align: center;
     color: var(--color-font-mid);
