--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -695,7 +695,7 @@ dialog {
 .select-dropdown {
   width: 100%;
   color: var(--color-font);
-  background-color: var(--color-base);
+  background-color: var(--color-base-secondary);
   border: 1px solid var(--color-border);
   padding: 5px;
   border-radius: 3px;
