--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -218,6 +218,11 @@ h3 {
 a > img {
   height: 100%;
 }
+select {
+  &:focus {
+    outline: none;
+  }
+}
 
 /* public/css/base/_inputs.css */
 input {
@@ -301,6 +306,9 @@ input[type=search]::-webkit-search-cancel-button,
 input[type=search]::-webkit-search-decoration:hover,
 input[type=search]::-webkit-search-cancel-button:hover {
   cursor: pointer;
+}
+input[type=search]::-webkit-calendar-picker-indicator {
+  display: none !important;
 }
 
 /* public/css/base/_material_icons.css */
@@ -686,15 +694,15 @@ dialog {
 /* public/css/elements/_dropdown.css */
 .select-dropdown {
   width: 100%;
-  background-color: var(--color-base-secondary);
   color: var(--color-font);
+  background-color: var(--color-base-secondary);
+  border: 1px solid var(--color-border);
+  padding: 5px;
+  border-radius: 3px;
   option.selected {
     background-color: var(--color-primary);
     color: var(--color-font-contrast);
   }
-}
-input[type=search]::-webkit-calendar-picker-indicator {
-  display: none !important;
 }
 
 /* public/css/elements/_key.css */
