--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -596,6 +596,18 @@ dialog {
     [data-id=popout-btn] {
       display: none;
     }
+    .drawer {
+      padding: 2px;
+      border: none;
+      background-color: var(--color-base-secondary);
+      color: var(--color-font);
+      box-shadow: none;
+    }
+    .headerDrag {
+      h2 {
+        font-weight: normal;
+      }
+    }
   }
   .minimize-btn::after {
     content: "minimize";
